packages/cardhost/app/styles/cards.css
.cardhost-cards {
  --bg-color: var(--view-bg);
  --view-bg: #F5F5F5;
  --schema-bg: var(--ch-deep-background);
  --themer-bg: var(--ch-foreground);
  --preview-bg: var(--ch-foreground);

  width: 100%;
  height: 100%;
  margin: 0;
  background-color: var(--bg-color);
  color: var(--ch-dark);
  transition: var(--ch-card-background-color-animate);
}

.cardhost-cards.dragging * {
  user-select: none;
}

.themer-card-width--small .card-renderer-isolated {
  width: var(--ch-card-size-small);
}

.themer-card-width--medium .card-renderer-isolated {
  width: var(--ch-card-size-medium);
}

.themer-card-width--large .card-renderer-isolated {
  width: var(--ch-card-size-large);
}

.card-renderer--container {
  height: 100%;
  width: 100%;
  overflow-y: auto;
}

.card-renderer--inner-container {
  transition: padding-right var(--ch-transition-time),
              padding-left var(--ch-transition-time);
}


/* Mode-specific styles */
.cardhost-cards.themer,
.cardhost-cards.preview,
.cardhost-cards.layout,
.cardhost-cards.fields {
  overflow-y: hidden;
}

.cardhost-cards.themer {
  --bg-color: var(--themer-bg);
}

.cardhost-cards.preview {
  --bg-color: var(--preview-bg);
}

.cardhost-cards.layout,
.cardhost-cards.fields {
  --bg-color: var(--schema-bg);
  background-image: url('/assets/images/grid-tile.png');
  background-repeat: repeat;
  background-size: 55px;
}

.cardhost-cards.view .card-renderer--container {
  height: calc(100% - var(--boxel-org-header-height));
}

.cardhost-cards.layout .card-renderer--container,
.cardhost-cards.fields .card-renderer--container,
.cardhost-cards.preview .card-renderer--container,
.cardhost-cards.themer .card-renderer--container {
  height: calc(100% - var(--ch-top-edge-height));
}

.cardhost-cards.view .card-renderer--container--without-breadcrumbs {
  padding-top: 30px;
}

.cardhost-cards.fields .card-renderer--inner-container {
  padding-right: var(--ch-right-edge-width);
  padding-left: var(--ch-left-edge-panel-width);
}

.cardhost-cards.layout .card-renderer--inner-container {
  padding-right: var(--ch-right-edge-width);
  padding-left: 160px;
}

.cardhost-cards.layout.themer-card-width--large .card-renderer--inner-container {
  padding-left: 0;
}

.card-renderer--inner-container.edit-container {
  padding-top: 30px;
}


@media (min-width: 1590px) {
  .cardhost-cards.layout .card-renderer--inner-container {
    padding-left: var(--ch-left-edge-panel-width);
  }
}

